Fixed project gap

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,4 +1,5 @@
 .nav {
+  position: relative;
   background-color: var(--black);
   letter-spacing: 3px;
   height: auto;
