--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -25,7 +25,7 @@
 
 .panels-container {
   position: relative;
-  height: 1500px;
+  height: auto;
   width: 100vw;
   display: grid;
   grid-template-columns: 50% 50%;
